refactors to proper flexbox layout

--- a/index.html
+++ b/index.html
@@ -2,9 +2,76 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <title></title>
+        <title>John R. Pribesh - Developer - Designer - Innovator</title>
+        <link href='https://fonts.googleapis.com/css?family=Roboto:400,300,700|Open+Sans:400,300|Montserrat:400,700' rel='stylesheet' type='text/css'>
+        <link rel="stylesheet" href="css/main.css">
     </head>
     <body>
+        <div class="content">
+            <div class="top-nav">
+                <div class="logo">
+                    <img class="logo-img" src="img/lime.svg" alt="devLimeLabs Logo"/>
+                </div>
+                <div class="nav-title">
+                    <h1>
+                        John R. Pribesh
+                    </h1>
+                    <h4>
+                        <em>developer / designer / innovator</em>
+                    </h4>
+                </div>
+            </div>
+            <hr>
+            <div class="hero">
+                <img class="hero-img" src="img/cat.jpg" alt="A cute kitten laying around"/>
+            </div>
+            <div class="featured">
+                <div class="featured-header">
+                    <h2 class="featured-title">Featured Work</h2>
+                </div>
+                <div class="works">
 
+                    <div class="work">
+                        <div class="work-img">
+                            <img src="img/cat.jpg" alt=""/>
+                        </div>
+                        <div class="info">
+                            <div class="info-title">
+                                <h3>Work</h3>
+                            </div>
+                            <p class="info-text">
+                                lkvtnprowijkemv'iorwjeg .er viorj.f ,vmpoldmfoeirhvoierj d,mv.m, p o ero vi feknvpof
+                            </p>
+                        </div>
+                    </div>
+                    <div class="work">
+                        <div class="work-img">
+                            <img src="img/cat.jpg" alt=""/>
+                        </div>
+                        <div class="info">
+                            <div class="info-title">
+                                <h3>Work</h3>
+                            </div>
+                            <p class="info-text">
+                                lkvtnprowijkemv'iorwjeg .er viorj.f ,vmpoldmfoeirhvoierj d,mv.m, p o ero vi feknvpof
+                            </p>
+                        </div>
+                    </div>
+                    <div class="work">
+                        <div class="work-img">
+                            <img src="img/cat.jpg" alt=""/>
+                        </div>
+                        <div class="info">
+                            <div class="info-title">
+                                <h3>Work</h3>
+                            </div>
+                            <p class="info-text">
+                                lkvtnprowijkemv'iorwjeg .er viorj.f ,vmpoldmfoeirhvoierj d,mv.m, p o ero vi feknvpof
+                            </p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
     </body>
 </html>
