--- a/index.html
+++ b/index.html
@@ -7,67 +7,54 @@
         <link rel="stylesheet" href="css/main.css">
     </head>
     <body>
-        <div class="content">
-            <div class="top-nav">
-                <div class="logo">
-                    <img class="logo-img" src="img/lime.svg" alt="devLimeLabs Logo"/>
-                </div>
-                <div class="nav-title">
-                    <h1>
-                        John R. Pribesh
-                    </h1>
-                    <h4>
-                        <em>developer / designer / innovator</em>
-                    </h4>
-                </div>
+        <div class="top-nav">
+            <div class="logo">
+                <img class="logo-img" src="img/lime.svg" alt="DevLimeLabs Logo"/>
             </div>
-            <hr>
+            <div class="nav-title">
+                <h1>
+                    John R. Pribesh
+                </h1>
+                <h4>
+                    <em>developer / designer / innovator</em>
+                </h4>
+            </div>
+        </div>
+        <hr>
+        <div class="main-content">
             <div class="hero">
-                <img class="hero-img" src="img/cat.jpg" alt="A cute kitten laying around"/>
+                <img class="hero-img" src="img/worldhero-large@2x.jpg" alt=""/>
             </div>
             <div class="featured">
                 <div class="featured-header">
-                    <h2 class="featured-title">Featured Work</h2>
+                    <h2>Featured Work</h2>
                 </div>
-                <div class="works">
-
-                    <div class="work">
-                        <div class="work-img">
-                            <img src="img/cat.jpg" alt=""/>
+                <div class="features">
+                    <div class="feature">
+                        <div class="feature-img">
+                            <img src="img/smalls/gsg-site1-small@2x.png" alt=""/>
                         </div>
-                        <div class="info">
-                            <div class="info-title">
-                                <h3>Work</h3>
-                            </div>
-                            <p class="info-text">
-                                lkvtnprowijkemv'iorwjeg .er viorj.f ,vmpoldmfoeirhvoierj d,mv.m, p o ero vi feknvpof
-                            </p>
+                        <div class="feature-info">
+                            <h3>Grace St. Grill</h3>
+                            <p><a href="http://gracestgrill.com">http://gracestgrill.com</a></p>
                         </div>
                     </div>
-                    <div class="work">
-                        <div class="work-img">
-                            <img src="img/cat.jpg" alt=""/>
+                    <div class="feature">
+                        <div class="feature-img">
+                            <img src="img/smalls/nycmap-small@2x.png" alt=""/>
                         </div>
-                        <div class="info">
-                            <div class="info-title">
-                                <h3>Work</h3>
-                            </div>
-                            <p class="info-text">
-                                lkvtnprowijkemv'iorwjeg .er viorj.f ,vmpoldmfoeirhvoierj d,mv.m, p o ero vi feknvpof
-                            </p>
+                        <div class="feature-info">
+                            <h3>NYC Metro Map</h3>
+                            <p><a href="http://ninjastatus.com/content/last-stop/">http://ninjastatus.com/content/last-stop/</a></p>
                         </div>
                     </div>
-                    <div class="work">
-                        <div class="work-img">
-                            <img src="img/cat.jpg" alt=""/>
+                    <div class="feature">
+                        <div class="feature-img">
+                            <img src="img/smalls/boxofcode-small@2x.png" alt=""/>
                         </div>
-                        <div class="info">
-                            <div class="info-title">
-                                <h3>Work</h3>
-                            </div>
-                            <p class="info-text">
-                                lkvtnprowijkemv'iorwjeg .er viorj.f ,vmpoldmfoeirhvoierj d,mv.m, p o ero vi feknvpof
-                            </p>
+                        <div class="feature-info">
+                            <h3>boxofco.de</h3>
+                            <p><a href="http://boxofco.de">http://boxofco.de</a></p>
                         </div>
                     </div>
                 </div>
