Updates for project review

--- a/index.html
+++ b/index.html
@@ -2,12 +2,13 @@
 <html>
     <head>
         <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>John R. Pribesh - Developer - Designer - Innovator</title>
-        <link href='https://fonts.googleapis.com/css?family=Roboto:400,300,700|Open+Sans:400,300|Montserrat:400,700' rel='stylesheet' type='text/css'>
+        <link href="https://fonts.googleapis.com/css?family=Roboto:400,300,700%7COpen+Sans:400,300%7CMontserrat:400,700" rel="stylesheet">
         <link rel="stylesheet" href="css/main.css">
     </head>
     <body>
-        <div class="top-nav">
+        <header class="top-nav">
             <div class="logo">
                 <img class="logo-img" src="img/lime.svg" alt="DevLimeLabs Logo"/>
             </div>
@@ -19,20 +20,20 @@
                     <em>developer / designer / innovator</em>
                 </h4>
             </div>
-        </div>
+        </header>
         <hr>
         <div class="main-content">
-            <div class="hero">
-                <img class="hero-img" src="img/worldhero-large@2x.jpg" alt=""/>
-            </div>
-            <div class="featured">
+            <section class="hero">
+                <img class="hero-img" src="img/worldhero-large@2x.jpg" alt="Abstract image mixing a global map with web related characters and overlays"/>
+            </section>
+            <section class="featured">
                 <div class="featured-header">
                     <h2>Featured Work</h2>
                 </div>
                 <div class="features">
                     <div class="feature">
                         <div class="feature-img">
-                            <img src="img/smalls/gsg-site1-small@2x.png" alt=""/>
+                            <img src="img/smalls/gsg-site1-small@2x.png" alt="Grace Street Grill Website Image"/>
                         </div>
                         <div class="feature-info">
                             <h3>Grace St. Grill</h3>
@@ -41,7 +42,7 @@
                     </div>
                     <div class="feature">
                         <div class="feature-img">
-                            <img src="img/smalls/nycmap-small@2x.png" alt=""/>
+                            <img src="img/smalls/nycmap-small@2x.png" alt="Image of ninjastatus.com's interactive subway station map"/>
                         </div>
                         <div class="feature-info">
                             <h3>NYC Metro Map</h3>
@@ -50,7 +51,7 @@
                     </div>
                     <div class="feature">
                         <div class="feature-img">
-                            <img src="img/smalls/boxofcode-small@2x.png" alt=""/>
+                            <img src="img/smalls/boxofcode-small@2x.png" alt="boxofco.de system administration tutorial website image"/>
                         </div>
                         <div class="feature-info">
                             <h3>boxofco.de</h3>
@@ -58,7 +59,7 @@
                         </div>
                     </div>
                 </div>
-            </div>
+            </section>
         </div>
     </body>
 </html>
