--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>John R. Pribesh - Developer - Designer - Innovator</title>
         <link href="https://fonts.googleapis.com/css?family=Roboto:400,300,700%7COpen+Sans:400,300%7CMontserrat:400,700" rel="stylesheet">
-        <link rel="stylesheet" href="css/main.css">
+        <link rel="stylesheet" href="styles/main.css">
     </head>
     <body>
         <header class="top-nav">
