Cleans up design & adds team treehouse badges

--- a/resume/index.html
+++ b/resume/index.html
@@ -10,22 +10,21 @@
     <meta name="viewport" content="width=device-width">
 </head>
 <body>
-    <div id="main">
+    <div id="main" class="light-bg">
         <div id="header" class="clear-fix primary-bg">
             <div id="header-top" class="dark-bg"></div>
             <ul id="topContacts" class="flex-box"></ul>
             <div id="header-main"></div>
         </div>
         <div style="clear: both;"></div>
-        <div id="workExperience" class="section">
+        <div id="workExperience">
             <h2>Work Experience</h2>
         </div>
-        <div id="education">
-            <h2>Education</h2>
+        <div id="online-courses">
+            <h2>Online Education</h2>
         </div>
-        <div id="online-courses" class="section">
-            <h2>Online Courses</h2>
-            <hr>
+        <div id="education">
+            <h2>Traditional Education</h2>
         </div>
         <div id="projects" class="section">
             <h2>Projects</h2>
