Cleans up code and design for resume project submission

--- a/resume/index.html
+++ b/resume/index.html
@@ -13,26 +13,26 @@
     <div id="main" class="light-bg">
         <div id="header" class="clear-fix primary-bg">
             <div id="header-top" class="dark-bg"></div>
-            <ul id="topContacts" class="flex-box"></ul>
-            <div id="header-main"></div>
+            <div id="header-main">
+                <ul id="topContacts" class="flex-box"></ul>
+            </div>
         </div>
-        <div style="clear: both;"></div>
-        <div id="workExperience">
+        <div id="workExperience" class="section">
             <h2>Work Experience</h2>
         </div>
-        <div id="online-courses">
+        <div id="online-courses" class="primary-bg">
             <h2>Online Education</h2>
         </div>
-        <div id="education">
+        <div id="education" class="primary-bg section">
             <h2>Traditional Education</h2>
         </div>
-        <div id="projects" class="section">
+        <div id="projects" class="section light-bg">
             <h2>Projects</h2>
         </div>
-        <div id="mapDiv">
+        <div id="mapDiv" class="primary-bg">
             <h2>Where I've Lived and Worked</h2>
         </div>
-        <div id="lets-connect" class="dark-gray section">
+        <div id="lets-connect" class="dark-bg">
             <h2 class="accent-bg center-text">Let's Connect</h2>
             <ul id="footerContacts" class="flex-box"></ul>
         </div>
